test/assets/invalid/case/match-expect-char.hs
myLength = case head "List" of
    "L" -> True
    'i' -> False